added @Transactional and integration tests