@@ -8,9 +8,9 @@ import kg.aleksandrov.shop.service.ProductService;
 import kg.aleksandrov.shop.util.ExceptionUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,14 +19,16 @@ public class ProductServiceImpl implements ProductService {
     private final ProductRepository productRepository;
 
     @Override
+    @Transactional(readOnly = true)
     public List<ProductDto> findAllProductsByType(ProductType type) {
         return productRepository.findAllByType(type)
                 .stream()
                 .map(ProductMapper.PRODUCT_MAPPER::toProductDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ProductDto getProductById(Long id) {
         var product = productRepository.findById(id)
                 .orElseThrow(() -> ExceptionUtils.productNotFoundException(id));
